force-app/main/default/objects/Classification_Profile_Assign__c/Classification_Profile_Assign__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a single classification to a profile</description>
    <label>Classification-Profile Assign</label>
    <nameField>
        <displayFormat>CA-Prof-{00000}</displayFormat>
        <label>Classification-Profile Assign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classification-Profile Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>