force-app/main/default/objects/Classification_Profile_Assign__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>The classification linked from this join record</description>
    <inlineHelpText>The classification linked from this join record</inlineHelpText>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Classification-Profile Assigns</relationshipLabel>
    <relationshipName>Classification_Profile_Assigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>