force-app/main/default/objects/Classification_Profile_Assign__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>The profile linked from this join record</description>
    <inlineHelpText>The profile linked from this join record</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>Classification-Profile Assigns</relationshipLabel>
    <relationshipName>Classification_Profile_Assigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>